re #8837 Remoção dos testes de integração não mantidos