@@ -120,16 +120,6 @@ test {
 	jvmArgs '-Xverify:none'
 }
 
-integrationTest {
-	jvmArgs '-Xverify:none'
-}
-
-integrationTest {
-	testLogging {
-		events 'started', 'passed'
-	}
-}
-
 artifacts {
 	archives sourcesJar
 }
